Changing short url details